--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <li><a href="#">Terms</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
-                <span>Copyright 2016, Original Trombones</span>
+                <span>Copyright 2021, Pineapple</span>
             </footer>
         </div>
     </div>
